# Automaton-Auditor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  how_to_linux_mac.txt  how_to_win.txt  pyproject.toml
audit/langsmith_logs/: lansmith_log_link.md
audit/report_bypeer_received/: habesha_audit.md
audit/report_onpeer_generated/: audit_report_20260301_100850.md
audit/report_onself_generated/: audit_report_20260226_105841.md  audit_report_20260301_123920.md  audit_report_20260301_124627.md
rubric/: week2_rubric.json
src/: config.py  graph.py  main.py
src/nodes/: detectives.py  judges.py  justice.py  state_models.py
src/tools/: ast_tools.py  git_tools.py  pdf_tools.py
tests/: test_detectives.py  test_judges.py
